refactor(app) : Refactor perbaikan halaman autentikasi

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <application
         android:label="GERCEPin V2"
         android:name="${applicationName}"
+        android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher">
 
         <!-- Tambahkan kode ini untuk menginisiasi map menggunakan Google Map API -->
